# Nexus

./: .gitignore  .gitmodules  DEPLOY_K8S.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  debug_tools.py  dev.sh  docker-compose.yml  package-lock.json  pyproject.toml  setup.sh  stop.sh  test_lexer_debug.py  test_notes_parse.py  test_nxml_parsing.py  trilog_schemas
.github/workflows/: type-check.yml
apps/GraphStudio.tmp/: .env  README.md  index.html  package-lock.json  package.json  pannel_dev.md  tailwind.config.js  tsconfig.json
apps/GraphStudio.tmp/example/: README.md  index.html  package.json
apps/GraphStudio.tmp/scripts/: dev-trilog.sh
apps/GraphStudio.tmp/src/: App.jsx  index.css  main.jsx
apps/GraphStudio.tmp/test_bg/: main.html  main.js
config/: otel-collector-config.yaml
docker/: graphstudio-backend.Dockerfile  graphstudio-frontend.Dockerfile  graphstudio.Dockerfile  nexus-os.Dockerfile  nexus-state.Dockerfile  nginx.conf  workspace-kernel.Dockerfile
docs/: 01_protocol_spec.md  01_reactor_spec.md  01_reactor_spec_VERIFICATION.md  02_runtime_spec.md  03_state_engine_spec.md  05_nexusos-obj.md  ARCHITECTURE.md  FIXES_APPLIED.md  GETTING_STARTED.md  IMPLEMENTATION_GAP_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  PATCHES_APPLIED.md  PHASE_5.5_SUMMARY.md  QUICK_START.md  STATE_MANAGEMENT_SERVICE.md  TROUBLESHOOTING.md  WORKSPACE_MANAGEMENT_PLAN.md  k8s-deployment-plan.md  nexus_spec.md  wasmedge_migration_strategy.md
examples/k8s/: DEPLOYMENT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md
examples/k8s/base/: configmap.yaml  namespace.yaml  secrets.yaml
examples/k8s/scripts/: build-images.sh  deploy.sh  logs.sh
k8s/: DEPLOYMENT_SUMMARY.md  QUICKSTART.md  README.md  deploy.sh  ingress.yaml  ingress.yaml.backup  namespace.yaml.backup  postgres.yaml.backup  workspace-kernel.yaml.backup
k8s/base/: configmap.yaml  namespace.yaml  secrets.yaml
k8s/ingress/: ingress.yaml
k8s/scripts/: build-images.sh  cleanup.sh  deploy.sh  fix-trilog-integration.sh  logs.sh  status.sh
k8s/services/graphstudio/: backend-deployment.yaml  backend-service.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml
k8s/services/nexus-os/: service.yaml
k8s/services/nexus-state/: deployment.yaml  hpa.yaml  service.yaml
k8s/services/postgres/: service.yaml  statefulset.yaml
k8s/services/redis/: deployment.yaml  service.yaml
k8s/services/workspace-kernel/: deployment.yaml  hpa.yaml  service.yaml
runtime/: README.md
runtime/graphstudio-backend/: README.md  database.py  main.py  models.py  nxml_validator.py  requirements.txt  schemas.py  seed_marketplace.py  trilog_setup.py  utils.py
runtime/graphstudio-backend/routers/: auth.py  marketplace.py  subscription.py
runtime/images/: Dockerfile
runtime/k8s/: deployment.yaml
runtime/nexus-ai/: README.md  pyproject.toml  trilog_setup.py
runtime/nexus-ai/nexus_ai/: __init__.py  context_builder.py  patch_generator.py  service.py
runtime/nexus-ai/nexus_ai/agents/: __init__.py  code_generator.py  design_agent.py  sync_agent.py
runtime/nexus-core/: pyproject.toml
runtime/nexus-core/nexus_core/: __init__.py
runtime/nexus-core/nexus_core/nog/: __init__.py  graph.py  queries.py  serialization.py
runtime/nexus-core/nexus_core/parser/: __init__.py  cache.py  lexer.py  parser.py  validator.py
runtime/nexus-core/nexus_core/sandbox/: __init__.py  capabilities.py  executor.py  pool.py
runtime/nexus-state/: README.md  pyproject.toml  requirements.txt
runtime/nexus-state/nexus_state/: __init__.py  config.py  database.py  main.py
runtime/nexus-state/nexus_state/api/: __init__.py  snapshot.py  state.py
runtime/nexus-state/nexus_state/core/: state_manager.py
runtime/nexus-state/nexus_state/models/: panel_state.py  schemas.py
runtime/nexus-state/nexus_state/services/: git_service.py  redis_service.py
runtime/nexus-wasm-bridge/: Cargo.toml
runtime/nexus-wasm-bridge/src/: capability.rs  config.rs  context.rs  error.rs  lib.rs  metrics.rs  napi.rs  quickjs_wrapper.js
runtime/nexus-wasm-bridge/src/engine/: compiler.rs  instance.rs  mod.rs  pool.rs
runtime/nexus-wasm-bridge/src/host_functions/: events.rs  extension.rs  logging.rs  mod.rs  state.rs  view.rs
runtime/workspace-kernel/: package-lock.json  package.json  pyproject.toml  trilog_setup.py  tsconfig.json
runtime/workspace-kernel/prisma/: dev.db  nexus-marketplace.db  schema.prisma  seed.ts
runtime/workspace-kernel/prisma/migrations/20251215181823_init_marketplace/: migration.sql
runtime/workspace-kernel/prisma/prisma/: dev.db
runtime/workspace-kernel/src/: config.ts  executor.ts  extensions.ts  index.ts  logger.ts  panel.ts  server.ts  types.ts
runtime/workspace-kernel/src/marketplace/: marketplace-router.ts
runtime/workspace-kernel/src/state/: engine.ts  git-service.ts  index.ts  nog-manager.ts  sync-manager.ts
runtime/workspace-kernel/src/state/mappers/: nxml.ts
runtime/workspace-kernel/workspace_kernel/: __init__.py  auth.py  config.py  database.py  main.py
runtime/workspace-kernel/workspace_kernel/api/: __init__.py  auth.py  nog.py  panels.py  workspaces.py
runtime/workspace-kernel/workspace_kernel/models/: __init__.py  panel.py  user.py  workspace.py
runtime/workspace-kernel/workspace_kernel/services/: __init__.py  git_service.py  nog_service.py  panel_service.py
runtime/workspace-kernel/workspace_kernel/websocket/: __init__.py  manager.py
scripts/: check-types.sh  test_cors.sh
services/nexus-os/: package-lock.json  package.json  tsconfig.json
trilog/: PROJECT_STRUCTURE.md  README.md  docker-compose.yml  requirements.txt  setup.py
trilog-schemas/: __init__.py  objects.py  processes.py  registry.py
trilog/config/: clickhouse-init.sql  otel-collector-config.yaml
trilog/k8s/: namespace.yaml
trilog/tests/: __init__.py  conftest.py  test_context.py  test_dsl.py  test_storage.py
trilog/trilog/: __init__.py  cli.py
trilog/trilog-ts/: .eslintrc.js  .gitignore  README.md  package.json  tsconfig.json
trilog/trilog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+190 files in other folders)
