[project]
name = "nexus-ai"
version = "0.1.0"
description = "AI integration for Nexus - LangChain/CrewAI agents for code generation"
requires-python = ">=3.11"
dependencies = [
    "nexus-protocol>=0.1.0",
    "nexus-core>=0.1.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "networkx>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_ai*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
