[package]
name = "nexus-wasm-bridge"
version = "1.0.0"
edition = "2021"
description = "Nexus WASM Runtime Bridge - Secure JavaScript execution in WasmEdge"
license = "MIT"
authors = ["Nexus Team"]
repository = "https://github.com/nexus/nexus-monorepo"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# N-API bindings for Node.js
napi = { version = "2.14", features = ["async", "serde-json"] }
napi-derive = "2.14"

# WasmEdge runtime
wasmedge-sdk = { version = "0.13", features = ["async", "aot"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"
once_cell = "1.19"
dashmap = "5.5"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

[build-dependencies]
napi-build = "2.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[[bench]]
name = "executor_bench"
harness = false
